# StarNavi_test

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/services/: authentication_rules.py  base_auth.py
social/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_auto_20210912_0813.py  0003_alter_likepost_liked_at.py  0004_auto_20210912_1255.py  0005_alter_socialprofile_last_activity.py  0006_delete_socialprofile.py
social/services/: dislikes.py  likes.py
social_network_api/: settings.py  urls.py
